# serializer version: 1
# name: test_entities[event.lg_tv_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'aspect',
        'back',
        'blue',
        'channel_down',
        'channel_up',
        'exit',
        'ez_adjust',
        'fast_forward',
        'green',
        'guide',
        'hdmi_1',
        'hdmi_2',
        'hdmi_3',
        'hdmi_4',
        'home',
        'info',
        'input',
        'in_start',
        'list',
        'menu',
        'mute',
        'down',
        'left',
        'right',
        'up',
        'num_0',
        'num_1',
        'num_2',
        'num_3',
        'num_4',
        'num_5',
        'num_6',
        'num_7',
        'num_8',
        'num_9',
        'ok',
        'pause',
        'play',
        'power',
        'power_off',
        'power_on',
        'red',
        'rewind',
        'sap',
        'settings',
        'stop',
        'subtitle',
        'text',
        'volume_down',
        'volume_up',
        'yellow',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.lg_tv_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '01JTEST0000000000000000000_received_command',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.lg_tv_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'aspect',
        'back',
        'blue',
        'channel_down',
        'channel_up',
        'exit',
        'ez_adjust',
        'fast_forward',
        'green',
        'guide',
        'hdmi_1',
        'hdmi_2',
        'hdmi_3',
        'hdmi_4',
        'home',
        'info',
        'input',
        'in_start',
        'list',
        'menu',
        'mute',
        'down',
        'left',
        'right',
        'up',
        'num_0',
        'num_1',
        'num_2',
        'num_3',
        'num_4',
        'num_5',
        'num_6',
        'num_7',
        'num_8',
        'num_9',
        'ok',
        'pause',
        'play',
        'power',
        'power_off',
        'power_on',
        'red',
        'rewind',
        'sap',
        'settings',
        'stop',
        'subtitle',
        'text',
        'volume_down',
        'volume_up',
        'yellow',
        'unknown',
      ]),
      'friendly_name': 'LG TV Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.lg_tv_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
